fix top navbar from falling behind other things on page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -73,7 +73,7 @@ h2 {
 .fixed-nav {
   position: fixed;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
   padding: 0;
 }
 
